[gd_scene load_steps=2 format=3 uid="uid://dvha7v1dtvjql"]

[ext_resource type="Script" path="res://addons/sprite_editor/NewDialog.gd" id="1_skecu"]

[node name="NewDialog" type="Window"]
auto_translate_mode = 1
title = "New Canvas"
size = Vector2i(312, 200)
script = ExtResource("1_skecu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Width" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Width"]
layout_mode = 2
text = "Width: "

[node name="WidthSpinBox" type="SpinBox" parent="VBoxContainer/Width"]
layout_mode = 2
min_value = 1.0
max_value = 4096.0
value = 256.0

[node name="Height" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/Height"]
layout_mode = 2
text = "Height: "

[node name="HeightSpinBox" type="SpinBox" parent="VBoxContainer/Height"]
layout_mode = 2
min_value = 1.0
max_value = 4096.0
value = 256.0

[node name="Container" type="Container" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="OKButton" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
text = "OK"

[node name="Container" type="Container" parent="VBoxContainer/Buttons"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="CancelButton" type="Button" parent="VBoxContainer/Buttons"]
layout_mode = 2
text = "Cancel"
